# carthage

./: .gitignore  CARTHAGE.md  CMakeLists.txt  FSBlock.hpp  FSObject.hpp  FSType.hpp  File.cpp  File.hpp  FileSystem.cpp  Folder.hpp  Name.hpp  Project.cpp  README.md  Subprocess.cpp  Subprocess.hpp  Versionable.cpp  carthage.dia  content.txt  fetch_meta.py  fork_clean.cpp  implementation_notes.md  utils.cpp
.cache/clangd/index/: Buffer.cpp.A158E9022319D232.idx  Buffer.hpp.1F32DEE7B20A5C04.idx  Buffer.tpp.65DFF9D672AC4F28.idx  Container.cpp.42148C9A8727AA6C.idx  Container.hpp.06305CC8F67097C5.idx  Extension.cpp.24F469741089BC1B.idx  Extension.hpp.D236753365EB4C55.idx  FSBlock.cpp.AC376C635E6B274B.idx  FSBlock.hpp.914C3160E97E5316.idx  FSObject.cpp.02948F2F9AAEC418.idx  FSObject.hpp.329B207DF445D1C7.idx  FSType.hpp.F6D25EE7439A0FE5.idx  File.cpp.DD6C33E0EEC3F4E3.idx  File.hpp.E097B0407195F768.idx  FileSystem.cpp.334A9CA053B29C62.idx  FileSystem.hpp.23B0DC48848D2289.idx  Folder.cpp.B2807E819ADFAA80.idx  Folder.hpp.FC1EE6D67B92CE59.idx  ID.cpp.0B8E7EF737BC3D43.idx  ID.hpp.3E5F2A0422FC057C.idx  InputBuffer.cpp.8CD8CCB0BBFDFEB1.idx  InputBuffer.hpp.7A40913E96573DDB.idx  InputBuffer.tpp.2EDD7CB5AA40E81D.idx  LUT_IDs.h.E7FF697A6BD358AD.idx  LUT_chars.h.DA00211D01CA0865.idx  Name.cpp.D89214AFAFD8AB1F.idx  Name.hpp.3D27CD51525B2EAD.idx  OutputBuffer.cpp.E5FD349A1658871C.idx  OutputBuffer.hpp.7CC3CAF23C97EE89.idx  OutputBuffer.tpp.8CDD54847D1D83C6.idx  StackSegment.cpp.7AA5A2D3BE71C29B.idx  StackSegment.hpp.38B68F40254A2204.idx  (+19 more)
VFS/: Container.cpp  Container.hpp  Container.tpp  FSBlock.cpp  FSBlock.hpp  FSObject.cpp  FSObject.hpp  FSType.hpp  File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  Folder.cpp  Folder.hpp  VFS_IO.cpp  VFS_IO.hpp  VFS_IO.tpp  Versionable.cpp  Versionable.hpp  main.cpp  utils.cpp  utils.h
VFS/_save_/: FileSystem.cpp  FileSystem.hpp
VFS_save/: Container.hpp  FSBlock.hpp  FSObject.cpp  FSObject.hpp  FSType.hpp  File.hpp  FileSystem.cpp  FileSystem.hpp  Folder.cpp  Versionable.cpp  Versionable.hpp  arg_blocks.hpp  arguments.hpp  main.cpp  utils.h  vfs.mdj
_old_/: FSBlock.cpp  FSObject.cpp  FileSystem.hpp  Folder.cpp  ID.cpp  ID.hpp  Name.cpp  Project.hpp  README.md  Versionable.hpp  main.cpp  utils.h
basic_buffers/: Buffer.hpp  Buffer.tpp  Extension.cpp  Extension.hpp  ID.cpp  ID.hpp  LUT_IDs.h  LUT_chars.h  Name.cpp  Name.hpp  SORT  StackSegment.hpp  StackSegment.tpp  SystemName.cpp  SystemName.hpp  main.cpp
dynamic_buffers/: InputBuffer.cpp  InputBuffer.hpp  InputBuffer.tpp  OutputBuffer.cpp  OutputBuffer.hpp  OutputBuffer.tpp  main.cpp
experimental/: COLOURBOX32440098.eps  buffer.cpp  generated.json  logo-carthage.blend  logo-carthage.blend1  segment.cpp
experimental/#alpha_file_system#/: Folder.cpp
experimental/#base_buffer#/: StackSegment.hpp  StackSegment.tpp  main.cpp
experimental/#read_file#/: temp.h  vfs_io.hpp  vfs_io.tpp
experimental/#store_ref#/: SR  sr.cpp
experimental/#test_decla#/: Array.hpp
experimental/action/: Action.hpp
experimental/alpha_file_system/: File.hpp  FileSystem.cpp  FileSystem.hpp  Filter.hpp  Folder.hpp
experimental/carthage_css/: base.css  base.js  index.html  projects.css  projects.html  projects_v2.html  style.css
experimental/carthage_logo/: test_carthage-2.xcf
experimental/environment/: Environment.cpp
experimental/locking_descriptor/: main.cpp
experimental/logs/: Log.cpp
experimental/map/: Map.hpp  Map.tpp  main.cpp
experimental/move/: move.cpp
experimental/path_state_machines/: PathMachine.cpp  PathMachine.hpp  StateMachine.hpp  mock.txt  state_machine.cpp  state_machine_dir.cpp
experimental/py_engine/: PyCObject.cpp  PyCObject.hpp  PyInt.cpp  PyInt.hpp  main.cpp
experimental/read_file/: main.cpp  vfs_io.cpp
experimental/store_ref/: sr.cpp
experimental/subprocess/: FORK  Subprocess.hpp  utils.hpp
experimental/tables_insert/: DUMP  client.js  dump.cpp
experimental/test_client_server/: client.cpp
experimental/test_decla/: main.cpp
experimental/test_time/: main.cpp
experimental/vector_reserve/: main.cpp
experimental/vfs_hierarchy/: vfs.css
testing/: javascript_base.js  test_lock.cpp
testing/__base_buffer__/: B
testing/alpha_file_system/: FS  File.cpp  FileSysObject.cpp  FileSysObject.hpp  main.cpp
testing/base_buffer/: Buffer.cpp  Buffer.hpp  Buffer.tpp  main.cpp
testing/environment/: BasicCSV_IO.cpp  BasicCSV_IO.hpp  Environment.hpp  env.csv
testing/logs/: Log.hpp  main.cpp
testing/path_state_machines/: MatchDirectories.cpp  MatchDirectories.hpp  StateMachine.cpp  StateMachine.tpp  main.cpp
testing/py_engine/: EMB  PyEngine.cpp  PyEngine.hpp
testing/read_file/: io_callback.cpp  io_callback.hpp  io_callback.tpp
testing/subprocess/: Subprocess.cpp  signals.h
testing/tables_insert/: ID  PTR  basic_id.cpp  test_ranges.py
testing/unique_poly/: main.cpp
(+48 files in other folders)
